--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      - name: Test
+        run: npm test onnx/candy.onnx pytorch/alexnet.pt.zip tflite/squeezenet.tflite
+
       - name: Build Python Server
         run: npm run build python
 
