--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
             "indent": [ "error", 4, { "SwitchCase": 1 } ],
             "keyword-spacing": "error",
             "linebreak-style": "off",
+            "no-array-constructor": "error",
             "no-await-in-loop": "error",
             "no-console": "error",
             "no-constructor-return": "error",
